# YNAB-Butler

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  butler.py  config.py  main.py  pyproject.toml  requirements.in  requirements.txt
importers/: __init__.py  email_importer.py  ingestion_engine.py  local_importer.py  zip_utils.py
processors/: alipay_processor.py  wechat_processor.py  ynab_formatter.py
tests/: conftest.py  test_alipay_processor.py  test_email_importer.py  test_ingestion_engine.py  test_local_importer.py  test_wechat_processor.py  test_zip_utils.py
ynabbridge/: __init__.py  account_mapping.py  formatter.py  ynab_client.py
